--- a/osi/lab_1/Makefile
+++ b/osi/lab_1/Makefile
@@ -2,9 +2,11 @@
 run: build
 	.\bin\main.exe
 build: 
-	cl  /EHsc /Fe".\bin\main" /Fo".\obj\source" src/main.cpp
+	cl  /EHsc /Fe".\bin\main" /Fo".\obj\main" src/main.cpp
 	cl  /EHsc /Fe".\bin\reporter" /Fo".\obj\reporter" src/reporter.cpp
 	cl  /EHsc /Fe".\bin\creator" /Fo".\obj\creator" src/creator.cpp
+clean_files:
+	del files\*
 clean:
 	del bin\*.exe obj\*.obj
 	
